--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "bizcharts-plugin-slider": "^2.0.3",
     "classnames": "^2.2.5",
     "dva": "^2.2.3",
+    "dva-loading": "^2.0.2",
+    "lodash": "^4.17.10",
     "lodash-decorators": "^5.0.0",
     "moment": "^2.22.1",
     "numeral": "^2.0.6",
